# qml-music

./: BottomView.qml  CMakeLists.txt  FavoritePageView.qml  HistoryPageView.qml  LeftMenu.qml  LocalPageView.qml  MusicIconButton.qml  RecommendPageView.qml  RoundImage.qml  SearchPageView.qml  TopBar.qml  TopBarButton.qml  icon.rc  main.cpp  main.qml
js/: api.mjs  request.mjs  requestApi.js
src/basic/: GlobalConfig.qml  qmldir
src/components/: BaseIconFont.qml  BaseWindow.qml
src/main/bottomControl/: BottomControl.qml
src/main/leftMenu/: LeftMenu.qml
src/main/mainContent/: MainContent.qml  MinAndMax.qml  TopHeader.qml
src/main/mainContent/stackPages/: CloudMusicCherryPick.qml  Settings.qml  Settings.qml.autosave
